--- a/Final Report/Final Technical Appendix.rmd
+++ b/Final Report/Final Technical Appendix.rmd
@@ -12,9 +12,13 @@ link-citations: yes
 # - In the data -1 means blank, -2 means don't know, -3 means refused
 ```
 
-Load all of the required packages and install any that are missing.
+# Preparing the Environment
 
-```{r Load and, if neccessary, install the package first, echo=TRUE, message=FALSE}
+(Please note that the `tidy` function in R-Markdown does not work correctly, and usually destroys the indentation / formatting of code which can lead to it being unreadable especially in code blocks as long as these, it is suggested for the reader's sanity that they look at the code in the .rmd file rather than the pdf but this choice can only be left to the reader)
+
+First, load all of the required packages and install any that are missing.
+
+```{r Load and, if necessary, install the package first, echo=TRUE, message=FALSE, cache=TRUE}
 if (!require("kableExtra")){
   install.packages("kableExtra")
   library("kableExtra")
@@ -70,7 +74,7 @@ if (!require("openintro")){
 if (!require("broom")){
   install.packages("broom")
   library("broom")
-} # To tidy and foritify the data into a dataframe for map use (https://www.rdocumentation.org/packages/broom/versions/0.5.0)
+} # To tidy and fortify the data into a data frame for map use (https://www.rdocumentation.org/packages/broom/versions/0.5.0)
 if (!require("rgeos")){
   install.packages("rgeos")
   library("rgeos")
@@ -81,12 +85,14 @@ if (!require("rgeos")){
 
 Import the datasets required from the ATUS [@ATUS] corpus of data. Summary and CPS files are used primarily.
 
-```{r Import Data, echo=TRUE, message=FALSE}
+```{r Import Data, echo=TRUE, message=FALSE, cache=TRUE}
 ATUS_dataset <- import("atussum_0317.csv", setclass = "tibble")    # import raw summary data as TIBBLE
 ATUS.CPS <- import('atuscps_0317.csv', setclass = "tibble") # import CPS data as TIBBLE for geographical data use
 ```
 
-```{r Tidying the Data, echo=TRUE, message=FALSE}
+Now some tidying and subsetting of the data can take place for use in the first section of the report.
+
+```{r Tidying the Data, echo=TRUE, message=FALSE, cache=TRUE}
 # Check there are no other NA's other than those in format explained in the notes
 NA_check <- sum(is.na(ATUS_dataset))
 # Add date from respondent file and change Sex values to M and F instead of 1 and 2
@@ -119,7 +125,7 @@ for (i in c(10:16, 18)){
   ATUS_dataset_edit <- bind_cols(ATUS_dataset_edit, part_tu0 = get(paste0("part_tu", i)))
   names(ATUS_dataset_edit)[ncol(ATUS_dataset_edit)] <- paste0("part_tu", i)
 }
-# Remove odd months (including July) for validation purposes
+# Filter into two separate data sets, saving odd months (including July) for validation purposes and using the rest to train models / explore the data
 ATUS_training_data <- filter(ATUS_dataset_edit, month(TUDIARYDATE) %in% c(2,4,6,8,10,12))
 ATUS_validation_data <- filter(ATUS_dataset_edit, month(TUDIARYDATE) %in% c(1,3,5,7,9,11))
 ATUS_plotting_data <- filter(ATUS_dataset_edit, month(TUDIARYDATE) != 7)
@@ -146,9 +152,9 @@ Data_minus_columns <- select(Data_minus_columns, -one_of("TEHRUSLT"))
 
 ## Exploratory Data Analysis
 
-The weighed means for each year are calculated for the 17 activity groups, both in minuted and % participation.
+The weighted means for each year are calculated for the 17 activity groups, both in minutes and % participation.
 
-```{r Weighted Means, echo=TRUE, message=FALSE}
+```{r Weighted Means, echo=TRUE, message=FALSE, cache=TRUE}
 Data_minus_columns_year_grouped <- Data_minus_columns %>% group_by(TUYEAR)
 weighted_means_data <- as_tibble(data.frame(TUYEAR = 2003:2017))
 for (i in 1:9){
@@ -166,25 +172,26 @@ for (i in c(10:16, 18)){
 }
 ```
 
-```{r Initial Summary Data, echo=TRUE, message=FALSE}
+Create and output some summary plots for the data in this state to aid in EDA.
+
+```{r Initial Summary Data, echo=TRUE, message=FALSE, cache=TRUE}
 melted_participation_data <- melt(select(part_weighted_means_data, "TUYEAR", grep("^part_tu", names(part_weighted_means_data))), id.vars="TUYEAR")
 melted_data <- melt(select(weighted_means_data, "TUYEAR", grep("^tu", names(weighted_means_data))), id.vars="TUYEAR")
 ```
 
-```{r Initial Summary Plots, echo=TRUE, message=FALSE}
+```{r Initial Summary Plots, echo=TRUE, message=FALSE, cache=TRUE}
 part_summary_plot <- ggplot(melted_participation_data, aes(x=TUYEAR, y=value, color = variable)) + geom_smooth(se=FALSE)
 summary_plot <- ggplot(melted_data, aes(x=TUYEAR, y=value, color=variable)) + geom_smooth(se=FALSE)
 ```
 
-```{r Printing Summary Plots, eval=FALSE, echo=TRUE, message=FALSE}
+```{r Printing Summary Plots, eval=FALSE, echo=TRUE, message=FALSE, cache=TRUE}
 print(part_summary_plot)
 print(summary_plot)
 ```
 
-The ATUS dataset records time spent on activities in minutes. This report initially looks at how the proportion of American's partaking in the 17 different groups of activities has changed.
-The following table gives a summary of some of these changes. The activities included are those with a percentage change of over 10% and a variance greater than 0.5.
+The ATUS data set records time spent on activities in minutes. This report initially looks at how the proportion of American's partaking in the 17 different groups of activities has changed. The following table gives a summary of some of these changes. The activities included are those with a percentage change of over 10% and a variance greater than 0.5.
 
-```{r Weighted Means Variance and Percentage Change, echo=TRUE}
+```{r Weighted Means Variance and Percentage Change, echo=TRUE, cache=TRUE}
 variance <- sapply(weighted_means_data, function(col) var(col))
 percentage_change <- (weighted_means_data[15,]/weighted_means_data[1,] - 1)*100
 Activity_year_measures <- bind_rows(variance, percentage_change)
@@ -195,7 +202,7 @@ part_Activity_year_measures <- bind_rows(part_variance, part_percentage_change)
 part_Activity_year_measures <- bind_cols(as_tibble(data.frame(Measure = c("Variance", "% Change"))), select(part_Activity_year_measures, -TUYEAR))
 ```
 
-```{r Weighted Means Variance and Percentage Change Table, echo=TRUE}
+```{r Weighted Means Variance and Percentage Change Table, echo=TRUE, cache=TRUE}
 kable_names <- "Measure"
 for (i in 1:9){
   kable_names <- c(kable_names, paste0("tu0", i))
@@ -208,18 +215,18 @@ part_Activity_year_measures_values <- select(part_Activity_year_measures, -"Meas
 part_Activity_year_measures_values <- part_Activity_year_measures_values %>% mutate(row_n = 1:n()) %>% select_if(function(x) any(abs(x) > 10 & .$row_n == 2))
 part_Activity_year_measures <- bind_cols(select(part_Activity_year_measures, "Measure"), part_Activity_year_measures_values)
 part_tu03_kable <- kable(part_Activity_year_measures, caption = "Change in Participation of Activities", booktabs = T, digits = 2)
-kable_styling(part_tu03_kable, full_width = T, latex_options = c("striped", "hold_position"))
+kable_styling(part_tu03_kable, full_width = T, latex_options = c("hold_position"))
 ```
 
-Best subsets regression on a linear model is performed to estimate which variables have the largest effect on tu04 paticipation %.
+Best subsets regression on a linear model is performed to estimate which variables have the largest effect on `tu04` participation percentage.
 
-```{r Best Subsets, include=FALSE}
+```{r Best Subsets, include=FALSE, cache=TRUE}
 best_subsets <- regsubsets(part_tu04~TUYEAR + TESEX + PEEDUCA + PEHSPNON + PTDTRACE + TEAGE + TELFS + TRCHILDNUM + TRHOLIDAY + TRSPPRES, data = Data_minus_columns, nvmax = 3, force.in = c(1))
 ```
 
-A summary spline curve glm model with log link and multiplicative errors is fitted to show the change in tu04 over the period.
+A summary spline curve glm with log link and multiplicative errors is fitted to show the change in `tu04` over the period.
 
-```{r part_tu04 Summary Model, message=FALSE, echo=TRUE, warning=FALSE}
+```{r part_tu04 Summary Model, message=FALSE, echo=TRUE, warning=FALSE, cache=TRUE}
 n1 <- nrow(part_weighted_means_data)
 part_tu04_summary_model <- glm(part_tu04 ~ ns(TUYEAR, knots = seq(2004, 2016, 2)), data = part_weighted_means_data,
                           family = quasi(link = "log", variance = "mu^2"),
@@ -237,13 +244,13 @@ part_tu04_summary_plot <- ggplot(part_weighted_means_data, aes(x=TUYEAR, y=part_
   geom_ribbon(data = part_tu04_summary_predicted, aes(y=fitted, ymin=ymin, ymax=ymax), alpha=0.1)
 ```
 
-```{r part_tu04 Summary Plot, message=FALSE, eval=FALSE, echo=TRUE}
+```{r part_tu04 Summary Plot, message=FALSE, eval=FALSE, echo=TRUE, cache=TRUE}
 print(part_tu04_summary_plot)
 ```
 
-Best subsets showed that sex and number of household children have the largest effect on tu04 participation %. Therefore tu04 participation % is first broken down by sex. Therefore new weighted means are calculated.
+Best subsets showed that sex and number of household children have the largest effect on `tu04` participation %. Therefore `tu04` participation % is first broken down by sex; then new weighted means are calculated.
 
-```{r Sex Weighted Means, echo=TRUE, message=FALSE}
+```{r Sex Weighted Means, echo=TRUE, message=FALSE, cache=TRUE}
 Data_minus_columns_year_sex_grouped <- Data_minus_columns %>% group_by(TUYEAR, TESEX)
 sex_weighted_means_data <- as_tibble(expand.grid(TUYEAR=seq(2003, 2017), TESEX=as.factor(c("M", "F"))))
 for (i in 1:9){
@@ -261,9 +268,9 @@ for (i in c(10:16, 18)){
 }
 ```
 
-A new model is built to take account of this split.
+A new model is built to take this split into account. The model is built using familiar techniques from previous lab reports.
 
-```{r part_tu04 Sex Model, message=FALSE, echo=TRUE, warning=FALSE}
+```{r part_tu04 Sex Model, message=FALSE, echo=TRUE, warning=FALSE, cache=TRUE}
 n2 <- nrow(part_sex_weighted_means_data)
 part_tu04_sex_model <- glm(part_tu04 ~ -1 + TESEX + TESEX:ns(TUYEAR, knots = seq(2004, 2016, 2)), data = part_sex_weighted_means_data,
                           family = quasi(link = "log", variance = "mu^2"),
@@ -280,13 +287,13 @@ part_tu04_sex_plot <- ggplot(part_sex_weighted_means_data, aes(x=TUYEAR, y=part_
   geom_ribbon(data = filter(part_tu04_sex_predicted, TESEX =="F"), aes(y=fitted, ymin=ymin, ymax=ymax),alpha=0.1)
 ```
 
-```{r part_tu04 Sex Plot, message=FALSE, eval=FALSE, echo=TRUE}
+```{r part_tu04 Sex Plot, message=FALSE, eval=FALSE, echo=TRUE, cache=TRUE}
 print(part_tu04_sex_plot)
 ```
 
-Weighted means for the number of household children for each group of people and year are calculated in order to see the change over the period.  A bar chart of these weighted mean number of household children is added to plot.
+Weighted means for the number of household children for each group of people and year are calculated in order to see the change over the period. A bar chart of these weighted mean number of household children is added to plot to provide visual aid in observing the trend.
 
-```{r TRCHILDNUM Weighted Means, message=FALSE, echo=TRUE, warning=FALSE}
+```{r TRCHILDNUM Weighted Means, message=FALSE, echo=TRUE, warning=FALSE, cache=TRUE}
 sex_weighted_means_TRCHILDNUM <- as_tibble(expand.grid(TUYEAR=seq(2003, 2017), TESEX=as.factor(c("M", "F"))))
 for (i in 1:9){
   sex_weighted_means_TRCHILDNUM <- full_join(sex_weighted_means_TRCHILDNUM, summarise_at(Data_minus_columns_year_sex_grouped, vars(TRCHILDNUM), funs(weighted.mean(., TUFNWGTP))))
@@ -311,9 +318,9 @@ part_tu04_sex_TRCHILDNUM_plot <- ggplot(part_sex_weighted_means_data, aes(x=TUYE
   scale_x_continuous(breaks = seq(2003,2017,2)) + xlab("Year") + ylab("Average number of children") + labs(color="Sex", fill="Sex") + theme(axis.title.y = element_text(margin = margin(t = 0, r = 10, b = 0, l = 0)), axis.title.x = element_text(margin = margin(t = 10, r = 0, b = 0, l = 0)))
 ```
 
-The suitability of the model is checked using an F test. It shows that is a significant improvement over the original model.
+The suitability of the model is checked using an $F$-test. It shows there is a significant improvement over the original model.
 
-```{r Suitability of the model, echo=TRUE}
+```{r Suitability of the model, echo=TRUE, cache=TRUE}
 part_tu04_summary_model_anova <- glm(part_tu04 ~ ns(TUYEAR, knots = seq(2004, 2016, 2)), data = part_sex_weighted_means_data, family = quasi(link = "log", variance = "mu^2"),
                               mustart = rep(5, n2))
 ANOVA_for_sex <- anova(part_tu04_summary_model_anova, part_tu04_sex_model, test="F")
@@ -321,13 +328,13 @@ ANOVA_for_sex <- anova(part_tu04_summary_model_anova, part_tu04_sex_model, test=
 
 The final plot is printed.
 
-```{r part_tu04 Sex Plot with Number of Children, message=FALSE, echo=TRUE, fig.height=4}
+```{r part_tu04 Sex Plot with Number of Children, message=FALSE, echo=TRUE, fig.height=4, cache=TRUE}
 print(part_tu04_sex_TRCHILDNUM_plot)
 ```
 
-The conclusion from the EDA in regards to the participation % for tu04 is informally tested by creating a simpler linear model which when tested shows that the coefficient for Year is < 0 and therefore confirms the belief.
+The conclusion from the EDA in regards to the participation % for `tu04` is informally tested by creating a simpler linear model which when tested shows that the coefficient for Year is < 0 and therefore confirms the belief.
 
-```{r Linear model for the plot, eval=TRUE, echo=TRUE, message=FALSE}
+```{r Linear model for the plot, eval=TRUE, echo=TRUE, message=FALSE, cache=TRUE}
 part_tu04_sex_linear_model <- lm(data=part_sex_weighted_means_data, part_tu04~TUYEAR + TESEX)
 part_tu04_sex_linear_model_summary <- summary(part_tu04_sex_linear_model)
 Year_t <- coefficients(part_tu04_sex_linear_model_summary)[2,3]
@@ -336,7 +343,7 @@ lm_p_value <- pt(Year_t, part_tu04_sex_linear_model$df, lower=TRUE)
 
 In order to check there is a link between the number of household children a new model must be produced which includes this as an explanatory variable. The code below builds this model.
 
-```{r Adding TRCHILDNUM to model, echo=TRUE, message=FALSE}
+```{r Adding TRCHILDNUM to model, echo=TRUE, message=FALSE, cache=TRUE}
 #note we have only 1439 respondents with TRCHILDNUM>4 so we set these to 4 so that the algorithm converges.
 Data_minus_columns_year_sex_child_grouped <- Data_minus_columns
 Data_minus_columns_year_sex_child_grouped <- mutate(Data_minus_columns_year_sex_child_grouped, TRCHILDNUM = ifelse(TRCHILDNUM >4, 4, TRCHILDNUM)) %>% group_by(TUYEAR, TESEX, TRCHILDNUM)
@@ -360,22 +367,22 @@ part_tu04_sex_child_model <- glm(part_tu04 ~ -1 + TRCHILDNUM + TESEX + TESEX:ns(
                           mustart = rep(5, n3))
 ```
 
-A t test confirms that this variable is significant, implying there is a dependence.
+A $t$-test confirms that this variable is significant, implying there is a dependence.
 
-```{r Testing the new model, eval=TRUE, echo=TRUE, message=FALSE}
+```{r Testing the new model, eval=TRUE, echo=TRUE, message=FALSE, cache=TRUE}
 sex_child_summary_for_t_test <- summary(part_tu04_sex_child_model)
 sex_child_p_value <- coefficients(sex_child_summary_for_t_test)[1,4]
 ```
 
-The key observation is that, as the table suggested, over the period the participation in caring for & helping non-household members has decreased for both men and women. Building a linear model using **Sex** and **Year** and performing a t-test confirms this. There also appears to be a link between participation in caring for & helping non-household members and the number of household children. Updating the spline curve model to include the number of household children and then again testing this hypothesis with a t-test confirms this is the case. Looking at the graph, fluctuations in the average number of household children, on the whole seem to be followed by but if we check the correlations between them, they show this link is fairly weak (0.65 for Men and 0.49 for Women), suggesting there must be further reasons for this change; possibly not measured in this dataset.
+The key observation is that, as the table suggested, over the period the participation in caring for & helping non-household members has decreased for both men and women. Building a linear model using `TESEX` and `TUYEAR` and performing a $t$-test confirms this. There also appears to be a link between participation in caring for & helping non-household members and the number of household children. Updating the spline curve model to include the number of household children and then again testing this hypothesis with a t-test confirms this is the case. Looking at the graph, fluctuations in the average number of household children, on the whole seem to be followed by but if we check the correlations between them, they show this link is fairly weak (0.65 for Men and 0.49 for Women), suggesting there must be further reasons for this change; possibly not measured in this dataset.
 
-#Validation
+## Validation
 
-In order to make formal conclusions based on the EDA we must hypotheses test them on the validation data.
+In order to make formal conclusions based on the EDA we must define hypotheses and test them on the validation data.
 
 The same tidying procedure is completed on the validation data.
 
-```{r Validation Data Tidying, echo=TRUE, message=FALSE}
+```{r Validation Data Tidying, echo=TRUE, message=FALSE, cache=TRUE}
 #remove full time vs part time as has -1
 Data_minus_columns_validation <- select(ATUS_validation_data, -one_of("TRDPFTPT"))
 #remove full time vs part time spouse as has -1
@@ -394,9 +401,9 @@ Data_minus_columns_validation <- select(Data_minus_columns_validation, -one_of("
 Data_minus_columns_validation <- select(Data_minus_columns_validation, -one_of("TEHRUSLT"))
 ```
 
-Again, weighted means are calculated for men and women, for each year.
+Again, weighted means are calculated for men and women; for each year.
 
-```{r Sex Weighted Means Validation, echo=TRUE, message=FALSE}
+```{r Sex Weighted Means Validation, echo=TRUE, message=FALSE, cache=TRUE}
 Data_minus_columns_year_sex_grouped_validation <- Data_minus_columns_validation %>% group_by(TUYEAR, TESEX)
 sex_weighted_means_data_validation <- as_tibble(expand.grid(TUYEAR=seq(2003, 2017), TESEX=as.factor(c("M", "F"))))
 for (i in 1:9){
@@ -414,9 +421,9 @@ for (i in c(10:16, 18)){
 }
 ```
 
-A linear model is fitted to the validation data and now a formal t test is completed. It confirms the proportion of American's who participate in caring for & helping non-household members has decreased over the period.
+A linear model is fitted to the validation data and now a formal $t$-test is completed. It confirms the proportion of American's who participate in caring for & helping non-household members has decreased over the period.
 
-```{r Linear model for the plot Validation, eval=TRUE, echo=TRUE, message=FALSE}
+```{r Linear model for the plot Validation, eval=TRUE, echo=TRUE, message=FALSE, cache=TRUE}
 part_tu04_sex_linear_model_validation <- lm(data=part_sex_weighted_means_data_validation, part_tu04~TUYEAR + TESEX)
 part_tu04_sex_linear_model_summary_validation <- summary(part_tu04_sex_linear_model_validation)
 Year_t_validation <- coefficients(part_tu04_sex_linear_model_summary_validation)[2,3]
@@ -425,7 +432,7 @@ lm_p_value_validation <- pt(Year_t_validation, part_tu04_sex_linear_model_valida
 
 Like with the EDA, a spline curve model is fitted.
 
-```{r part_tu04 Sex Model Validation, message=FALSE, echo=TRUE, warning=FALSE}
+```{r part_tu04 Sex Model Validation, message=FALSE, echo=TRUE, warning=FALSE, cache=TRUE}
 n2_validation <- nrow(part_sex_weighted_means_data_validation)
 part_tu04_sex_model_validation <- glm(part_tu04 ~ -1 + TESEX + TESEX:ns(TUYEAR, knots = seq(2004, 2016, 2)), data = part_sex_weighted_means_data_validation,
                           family = quasi(link = "log", variance = "mu^2"),
@@ -442,9 +449,9 @@ part_tu04_sex_plot_validation <- ggplot(part_sex_weighted_means_data_validation,
   geom_ribbon(data = filter(part_tu04_sex_predicted_validation, TESEX =="F"), aes(y=fitted, ymin=ymin, ymax=ymax),alpha=0.1)
 ```
 
-Again, to check if the link between number of household children and tu04 participation % is significant it must be tested using an update of the model which includes the number of household children as an explanatory variable.
+Again, to check if the link between number of household children and `tu04` participation % is significant it must be tested using an update of the model which includes the number of household children as an explanatory variable.
 
-```{r Adding TRCHILDNUM to model Validation, echo=TRUE, message=FALSE}
+```{r Adding TRCHILDNUM to model Validation, echo=TRUE, message=FALSE, cache=TRUE}
 Data_minus_columns_year_sex_child_grouped_validation <- Data_minus_columns_validation
 Data_minus_columns_year_sex_child_grouped_validation <- mutate(Data_minus_columns_year_sex_child_grouped_validation, TRCHILDNUM = ifelse(TRCHILDNUM >4, 4, TRCHILDNUM)) %>% group_by(TUYEAR, TESEX, TRCHILDNUM)
 sex_child_weighted_means_data_validation <- as_tibble(expand.grid(TUYEAR=seq(2003, 2017), TESEX=as.factor(c("M", "F")),  TRCHILDNUM = 0:4))
@@ -467,16 +474,16 @@ part_tu04_sex_child_model_validation <- glm(part_tu04 ~ -1 + TRCHILDNUM + TESEX 
                           mustart = rep(5, n3_validation))
 ```
 
-The t-test is completed on the model and confirms the belief that there is a link is true.
+The $t$-test is completed on the model and confirms the belief of the presence of a link.
 
-```{r Testing the new model Validation, eval=TRUE, echo=TRUE, message=FALSE, fig.height=4}
+```{r Testing the new model Validation, eval=TRUE, echo=TRUE, message=FALSE, fig.height=4, cache=TRUE}
 sex_child_summary_for_t_test_validation <- summary(part_tu04_sex_child_model_validation)
 sex_child_p_value_validation <- coefficients(sex_child_summary_for_t_test_validation)[1,4]
 ```
 
-To plot the results, all of the data, exluding those for July, is used. The same method of tidying the data, calculating weighted means, building a spline curve glm model with log link and multiplicative error and plotting a graphical interpretation of the model is performed.
+To plot the results, all of the data, excluding those for July, is used. The same method of tidying the data, calculating weighted means, building a spline curve glm model with log link and multiplicative error and plotting a graphical interpretation of the model is performed.
 
-```{r Plotting Data Tidying, echo=TRUE, message=FALSE}
+```{r Plotting Data Tidying, echo=TRUE, message=FALSE, cache=TRUE}
 #remove full time vs part time as has -1
 Data_minus_columns_plotting <- select(ATUS_plotting_data, -one_of("TRDPFTPT"))
 #remove full time vs part time spouse as has -1
@@ -495,7 +502,7 @@ Data_minus_columns_plotting <- select(Data_minus_columns_plotting, -one_of("TRER
 Data_minus_columns_plotting <- select(Data_minus_columns_plotting, -one_of("TEHRUSLT"))
 ```
 
-```{r Sex Weighted Means Plotting, echo=TRUE, message=FALSE}
+```{r Sex Weighted Means Plotting, echo=TRUE, message=FALSE, cache=TRUE}
 Data_minus_columns_year_sex_grouped_plotting <- Data_minus_columns_plotting %>% group_by(TUYEAR, TESEX)
 sex_weighted_means_data_plotting <- as_tibble(expand.grid(TUYEAR=seq(2003, 2017), TESEX=as.factor(c("M", "F"))))
 for (i in 1:9){
@@ -513,7 +520,7 @@ for (i in c(10:16, 18)){
 }
 ```
 
-```{r part_tu04 Sex Model Plotting, message=FALSE, echo=TRUE, warning=FALSE}
+```{r part_tu04 Sex Model Plotting, message=FALSE, echo=TRUE, warning=FALSE, cache=TRUE}
 n2_plotting <- nrow(part_sex_weighted_means_data_plotting)
 part_tu04_sex_model_plotting <- glm(part_tu04 ~ -1 + TESEX + TESEX:ns(TUYEAR, knots = seq(2004, 2016, 2)), data = part_sex_weighted_means_data_plotting,
                           family = quasi(link = "log", variance = "mu^2"),
@@ -526,7 +533,7 @@ part_tu04_sex_predicted_plotting <-bind_cols(part_tu04_sex_model_data_plotting,
                                                                     ymax = exp(part_tu04_sex_predicted_plotting$fit+1.128*part_tu04_sex_predicted_plotting$se.fit))))
 ```
 
-```{r TRCHILDNUM Weighted Means Plotting, message=FALSE, echo=TRUE, warning=FALSE}
+```{r TRCHILDNUM Weighted Means Plotting, message=FALSE, echo=TRUE, warning=FALSE, cache=TRUE}
 sex_weighted_means_TRCHILDNUM_plotting <- as_tibble(expand.grid(TUYEAR=seq(2003, 2017), TESEX=as.factor(c("M", "F"))))
 for (i in 1:9){
   sex_weighted_means_TRCHILDNUM_plotting <- full_join(sex_weighted_means_TRCHILDNUM_plotting, summarise_at(Data_minus_columns_year_sex_grouped_plotting, vars(TRCHILDNUM), funs(weighted.mean(., TUFNWGTP))))
@@ -551,11 +558,11 @@ part_tu04_sex_TRCHILDNUM_plot_plotting <- ggplot(part_sex_weighted_means_data_pl
   scale_x_continuous(breaks = seq(2003,2017,2)) + xlab("Year") + ylab("Average number of children") + labs(color="Sex", fill="Sex") + theme(axis.title.y = element_text(margin = margin(t = 0, r = 10, b = 0, l = 0)), axis.title.x = element_text(margin = margin(t = 10, r = 0, b = 0, l = 0)))
 ```
 
-```{r part_tu04 Sex Plot with Number of Children Plotting, message=FALSE, echo=TRUE, eval=FALSE}
+```{r part_tu04 Sex Plot with Number of Children Plotting, message=FALSE, echo=TRUE}
 print(part_tu04_sex_TRCHILDNUM_plot_plotting)
 ```
 
-# How The Time Spent on Traditionally Gendered Activities has Converged as Gender Roles have Broken Down
+# Investigating Whether the Time Spent on Traditionally Gendered Activities has Converged as Gender Roles have Broken Down
 
 Apply some reformatting to the data imported previously to better fit the exploratory analysis to be carried out. This includes the creation of a `TUBIRTHYEAR` feature to be used in separating people into different generations (Millenials, Baby Boomers etc.) represented by another feature called `TUGENERATION`. The `ATUS.CPS` dataset is then filtered to select regional data which can be joined to the dataset created so far for EDA.
 
@@ -598,41 +605,34 @@ This for-loop structure calculates weighted means for each possible combination 
 This for loop also calculates a `Gender.Roles.Differences` data frame to store the differences between genders in the weighted mean values corresponding to each combination of `variable`, `month`, `generation` and `year`. These differences can then be used to perform statistical tests on the changes over the given period of data in the time use within each of the investigated variables to study how gender roles have changed.
 
 ```{r, cache=TRUE}
-Gender.Roles.Differences <- data.frame('Year' = c(), 'Month' = c(), 'Variable' = c(), 'Generation' = c(), 'Difference' = c())
 for (variable in c("Working", "House.Maintenance", "Vehicle.Maintenance", "Housework", "Food.Preparation", "Childcare")) {
     Gender.Roles.Data[,paste0('weighted.', variable)] <- 0
     for (generation in c("Silent Generation", "Baby Boomers", "Generation X", "Millennials")) {
         for (year in unique(Gender.Roles.Data$TUYEAR)) {
             for (month in unique(month(Gender.Roles.Data$TUDIARYDATE))) {
                 for (sex in c("M", "F")) {
-                    Filtered.Data <- filter(Gender.Roles.Data, TESEX == sex, TUYEAR == year, month(TUDIARYDATE) == month, TUGENERATION == generation)
-                    bottom.sum <- sum(Filtered.Data$TUFNWGTP)
-                    top.sum <- sum(Filtered.Data$TUFNWGTP * Filtered.Data[,variable])
-                    weighted.values <- top.sum / bottom.sum
-                    if (sex == 'M') m.weighted.values <- weighted.values
                     for (region in 1:4) {
-                        Filtered.Regional.Data <- filter(Filtered.Data, GEREG == region)
-                        bottom.sum <- sum(Filtered.Regional.Data$TUFNWGTP)
-                        top.sum <- sum(Filtered.Regional.Data$TUFNWGTP * Filtered.Regional.Data[,variable])
-                        weighted.regional.values <- top.sum / bottom.sum
+                        # Work only with the data which conforms to the current step in the for loop, this defines a demographic to calculate a weighted mean for
+                        Filtered.Data <- filter(Gender.Roles.Data, TESEX == sex, TUYEAR == year, month(TUDIARYDATE) == month, TUGENERATION == generation, GEREG == region)
+                        bottom.sum <- sum(Filtered.Data$TUFNWGTP)
+                        top.sum <- sum(Filtered.Data$TUFNWGTP * Filtered.Data[,variable])
+
+                        # Use above calculations to work out weighted means for the current combination in the for loop
+                        weighted.values <- top.sum / bottom.sum
                         Gender.Roles.Data[Gender.Roles.Data$TESEX == sex & Gender.Roles.Data$TUYEAR == year & month(Gender.Roles.Data$TUDIARYDATE) == month & Gender.Roles.Data$GEREG == region & Gender.Roles.Data$TUGENERATION == generation, paste0('weighted.', variable)] <- weighted.values
                     }
                 }
-                weighted.difference <- m.weighted.values - weighted.values
-                Gender.Roles.Differences <- rbind(Gender.Roles.Differences, data.frame('Year' = year, 'Month' = month, 'Variable' = variable, 'Generation' = generation, 'Difference' = unique(weighted.difference)))
             }
         }
     }
 }
 ```
 
-Split the full dataset into `Train`, `Validate` and `Plotting` subsets, where `Train` includes all of the even-numbered months, `Validate` contains all of the odd-numbered months
+Split the full dataset into `Train`, `Validate` and `Plotting` subsets, where `Train` includes all of the even-numbered months, `Validate` contains all of the odd-numbered months. `Plotting` includes all of the months except July as required for the task, it is this data that is used for plots in the final report.
 
 ```{r, cache=TRUE}
 Gender.Roles.Train <- filter(Gender.Roles.Data, month(TUDIARYDATE) %% 2 == 0)
 Gender.Roles.Validate <- filter(Gender.Roles.Data, month(TUDIARYDATE) %% 2 != 0)
-Gender.Roles.Train
-Gender.Roles.Validate
 Gender.Roles.Plotting <- filter(Gender.Roles.Data, month(TUDIARYDATE) != 7)
 ```
 
@@ -648,21 +648,27 @@ for (i in 4:17) {
         Dates[i-3] <- paste(paste0("20", i), "01", "01", sep = "-")
     }
 }
+
+# Function to create glm()'s 
 fit.models.and.plot <- function(Data, variable, mu) {
-    # Start building models for the data
     n <- nrow(Data)
+    # Commented out models show alternative number of splines / setup
     # model1 <- glm(as.formula(paste0('weighted.',variable,' ~ ns(TUDIARYDATE, knots = (c(as.Date("2006-01-01"), as.Date("2009-01-01"), as.Date("2012-01-01"), as.Date("2015-01-01"))))')), data = Data, family = quasi(link = "log", variance = "mu^2"), mustart = rep(10, n))
     model1 <- glm(as.formula(paste0('weighted.',variable,' ~ ns(TUDIARYDATE)')), data = Data, family = quasi(link = "log", variance = "mu^2"), mustart = rep(mu, n))
-    model2 <- update(model1, . ~ . + TESEX)
-    # model3 <- update(model1, . ~ -1 + TESEX + TESEX:ns(TUDIARYDATE, knots = (c(as.Date('2006-01-01'), as.Date('2009-01-01'), as.Date('2012-01-01'), as.Date('2015-01-01')))))
-    model3 <- update(model1, . ~ -1 + TESEX + TESEX:ns(TUDIARYDATE, knots = c(as.Date(Dates))))
-    model4 <- update(model3, .~. + GEREG + GEREG:ns(TUDIARYDATE, knots = c(as.Date(Dates))))
-    model5 <- update(model3, .~. + TUGENERATION + TUGENERATION:ns(TUDIARYDATE, knots = c(as.Date(Dates))))
-    # model5 <- update(model3, .~. + GEREG + GEREG:ns(TUDIARYDATE, knots = c(as.Date(Dates))))
+    
+    # Similar model structure to that found in lab 5, works well in this context
+    model2 <- update(model1, . ~ -1 + TESEX + TESEX:ns(TUDIARYDATE, knots = c(as.Date(Dates))))
+
+    # UNUSED model was tested to investigate regional differences, it was decided that generational was more interesting
+    model3 <- update(model2, .~. + GEREG + GEREG:ns(TUDIARYDATE, knots = c(as.Date(Dates))))
+
+    # Incorporating generational differences into the model allows for grouping and plots to investigate difference in generations
+    model4 <- update(model2, .~. + TUGENERATION + TUGENERATION:ns(TUDIARYDATE, knots = c(as.Date(Dates))))
+    # model4 <- update(model2, .~. + GEREG + GEREG:ns(TUDIARYDATE, knots = c(as.Date(Dates))))
     # Use same method as in lab 5 to plot them
     # change the model number in the predict functions below for different models
-    male.prediction <- predict.glm(model5, newdata = filter(Data, TESEX == 'M'), se = TRUE, type = "response")
-    female.prediction <- predict.glm(model5, newdata = filter(Data, TESEX == 'F'), se = TRUE, type = "response")
+    male.prediction <- predict.glm(model4, newdata = filter(Data, TESEX == 'M'), se = TRUE, type = "response")
+    female.prediction <- predict.glm(model4, newdata = filter(Data, TESEX == 'F'), se = TRUE, type = "response")
     df <- data.frame(age = c(filter(Data, TESEX == 'M')$TEAGE, filter(Data, TESEX == 'F')$TEAGE), prediction = c(male.prediction$fit, female.prediction$fit), date = c(filter(Data, TESEX == 'M')$TUDIARYDATE, filter(Data, TESEX == 'F')$TUDIARYDATE), prediction_error = c(1.96*male.prediction$se.fit, 2*female.prediction$se.fit), type = c(filter(Data, TESEX == 'M')$TESEX, filter(Data, TESEX == 'F')$TESEX), region = c(filter(Data, TESEX == 'M')$GEREG, filter(Data, TESEX == 'F')$GEREG), generation = c(filter(Data, TESEX == "M")$TUGENERATION, filter(Data, TESEX == "F")$TUGENERATION))
     if (variable == 'Working' | variable == 'Childcare') {
         print(ggplot(filter(df, generation != "Silent Generation"), aes(x=date, y=prediction, colour=type)) +
@@ -676,7 +682,7 @@ fit.models.and.plot <- function(Data, variable, mu) {
 }
 ```
 
-Generate plots for EDA to observe potential long-term trends over time for each of the chosen variables to investigate. `mu` values were experimented with once the data was first observe to roughly fall within the range of plotted values for each model.
+Generate plots for EDA to observe potential long-term trends over time for each of the chosen variables to investigate. `mu` values were experimented with once the data was first observed so that they roughly fall within the range of plotted values for each model. All of the plots show separate curves for male and female, as this was deemed to be more informative and interesting for the reader than plotting an engineered difference between the two.
 
 ```{r, cache = TRUE}
 fit.models.and.plot(Gender.Roles.Train, 'Working', 250)
@@ -687,7 +693,7 @@ fit.models.and.plot(Gender.Roles.Train, 'Food.Preparation', 60)
 fit.models.and.plot(Gender.Roles.Train, 'Childcare', 50)
 ```
 
-Generate plots to validate the trends obvserved above are consistent in the other half of the data.
+Generate plots to validate the trends observed above are consistent in the other half of the data. Further validation is carried out below but these provide some initial visual validation.
 
 ```{r, cache=TRUE}
 fit.models.and.plot(Gender.Roles.Validate, 'Working', 250)
@@ -698,7 +704,7 @@ fit.models.and.plot(Gender.Roles.Validate, 'Food.Preparation', 60)
 fit.models.and.plot(Gender.Roles.Validate, 'Childcare', 50)
 ```
 
-Generate plots on the entire dataset with the exception of July which is the directed month to exclude for this project. These plots are the ones included in the final report.
+Generate plots on the entire dataset with the exception of July which is the directed month to exclude for this project. These plots are the ones included in the final report in order to conform with the requests of those who set the task. It is mentioned in the report that `House.Maintenance` and `Vehicle.Maintenance` are relatively uninteresting so no plots for these were included in the report to conserve space.
 
 ```{r, cache=TRUE}
 # Plot found in the Working section
@@ -711,13 +717,15 @@ fit.models.and.plot(Gender.Roles.Plotting, 'Food.Preparation', 60)
 fit.models.and.plot(Gender.Roles.Plotting, 'Childcare', 50)
 ```
 
+Create a `Gender.Roles.Differences` data frame which calculates the weighted means for each combination of `sex`, `variable` and `year` on a dataset only containing data from the defined validation months, these are then used to validate the hypotheses made earlier in the report. This process is quoted in the report but not included as it is potentially more statistical and complex than necessary for conveying the point of validation and $t$-tests / $p$-values behind said validation.
+
 ```{r}
-Gender.Roles.Validate <- filter(Gender.Roles.Data, month(TUDIARYDATE) %% 2 != 0)
+Gender.Roles.Validate.Dif <- filter(Gender.Roles.Data, month(TUDIARYDATE) %% 2 != 0)
 Gender.Roles.Differences <- data.frame('Year' = c(), 'Variable' = c(), 'Difference' = c())
 for (variable in c("Working", "House.Maintenance", "Vehicle.Maintenance", "Housework", "Food.Preparation", "Childcare")) {
-    for (year in unique(Gender.Roles.Validate$TUYEAR)) {
+    for (year in unique(Gender.Roles.Validate.Dif$TUYEAR)) {
         for (sex in c("M", "F")) {
-            Filtered.Data <- filter(Gender.Roles.Validate, TESEX == sex, TUYEAR == year)
+            Filtered.Data <- filter(Gender.Roles.Validate.Dif, TESEX == sex, TUYEAR == year)
             bottom.sum <- sum(Filtered.Data$TUFNWGTP)
             top.sum <- sum(Filtered.Data$TUFNWGTP * Filtered.Data[,variable])
             weighted.values <- top.sum / bottom.sum
@@ -728,7 +736,8 @@ for (variable in c("Working", "House.Maintenance", "Vehicle.Maintenance", "House
     }
 }
 ```
-Code for running $t$-tests
+
+Code for running $t$-tests. the data set created above is filtered by variable (excluding `House.Maintenance` and `Vehicle.Maintenance` as these did not appear particularly interesting in the EDA as mentioned earlier) then a linear model is fitted along the datapoints, there is one point for each year. The summary for each model is then printed to allow for observation of the $t$-statistic and associated $p$-values. The `pt()` function can then be used on the coefficients extracted from the summary to conclude a one-tailed significance $t$-test. Note that some values come back as 0.9... because of the negative differences, these results still align with our hypotheses and all of the $p$-values indicate significance.
 
 ```{r}
 for (variable in c("Working", "Housework", "Food.Preparation", "Childcare")) {
